# c_compiler

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  vcpkg.json
src/: defs.h  main.c  token.c  token.h
tests/: test.asm
